[package]
name = "supaleve-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.19", features = ["color-hex"] }
eframe = "0.19"
egui_extras = { version = "0.19", features = ["image"] }
image = { version = "0.24", features = ["png"] }

egui_file = "0.2.0"